--- a/style.css
+++ b/style.css
@@ -46,45 +46,38 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
-body{
-    line-height: 1.5;
-}
-.home{
-    background-color: pink;
-}
-.main-header{
-    text-align: center;
-    margin-bottom: 60px;
-    background-color: aquamarine;
-    padding: 24px;
-}
-article{
-    margin-bottom: 60px;
-}
 h1{
+    background-color: lightsalmon;
     font-size: 32px;
-    margin-bottom: 22px;
+    text-align: center;
+    margin:none;
+    padding:28px;
 }
-h2{
-    font-size: 28px;
-    margin-bottom: 22px;
+.container{
+    width: 600px;
+    height: 600px;
+    color: blue;
+    background-color: #d1d631;
+    border: 2px dotted black;
 }
-p{
-
-    margin-top: 8px;
-    margin-bottom: 8px;
-    font-size: 18px;
-}
-
 img{
+    width: 400px;
+    height: 400px;
+    border-radius: 24%;
+}
+.circle{
     width: 300px;
+    height: 300px;
+    border-radius: 50%;
+    background-color: crimson;
 }
 .footer{
-    text-align: center;
-    font-size: 24px;
-    background-color: aquamarine;
-    padding: 24px;
+    font-size: 18px;
+
 }
-.footer a{
+a{
     text-decoration: none;
+    border-bottom: 3px dashed;
+    background-color: coral;
+    padding: 20 30px;
 }
