--- a/assignment-eight/style.css
+++ b/assignment-eight/style.css
@@ -46,73 +46,76 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+/* custom starts */
 body{
     line-height: 1.5;
-    font-size: 16px;
-    color: #fff;
 }
+/* header */
 .header{
+    background-color:yellowgreen;
     text-align: center;
-    font-size: 32px;
-    color: aliceblue;
-    background-color: #2e313f;
+    font-size: 28px;
+    padding: 80px;
 }
-a{
-    font-size: 20px;
-    color: aliceblue;
-    text-align: center;
-    text-decoration: none;
+h1{
+    font-size: 38px;
     text-transform: uppercase;
+}
+/* anchor tags */
+a{
+    color: blue;
+    text-transform: uppercase;
+    font-size: 28px;
+    padding: 20px;
+    text-decoration: none;
+    margin-top: 20px;
 }
 h2{
-    font-size:32px;
-    text-align: left;
-    padding-top: 80px;
-    margin: 40px;
-    margin-left: 200px;
-    text-transform: uppercase;
-    color: white;
-
+    font-size: 24px;
+    color: red;
 }
-hr{
-    width: 900px;
+.text{
+    color: black;
 }
 p{
-    text-align: left;
-    font-size: 22px;
-    padding-top: 10px;
-    color: aliceblue;
-padding-bottom: 10px;
-margin-left: 190px;
+    font-size: 24px;
+    color: white;
 }
-
-h2{
-    font-size: 20px;
-    text-align: left;
-    color: #fff;
-    margin-left: 180px;
+.container{
+    width: 800px;
+    margin: 0 auto;
+}
+.hero{
+    background-color: yellowgreen;
+    padding: 60px;
+}
+.heading{
+    font-size: 24px;
+    padding: 24px;
+}
+.blog{
+    background-color: teal;
 }
 img{
-    width: 150px;
-    height: 150px;
+    width: 200px;
+    height: 200px;
     border-radius: 50%;
-    text-align: left;
-    margin-left: 180px;
 }
-
-.blog{
-    background-color: darkslateblue;
-    margin-top:  0px;
-}
-a{
+.para{
     font-size: 20px;
-    color:#fff;
-    margin-left: 100px;
+    color: white;
+    padding: 10px;
 }
+.article-link{
+    font-size: 24px;
+    color: crimson;
+    text-transform: uppercase;
+}
+/* footer starts here */
 .footer{
-    background-color: #2e313f;
-    padding: 60px;
+    padding: 20px;
+    font-size: 32px;
     text-align: center;
+    background-color: yellowgreen;
+    color: white;
 }
-
-
