--- a/checkpoint-1/blog.css
+++ b/checkpoint-1/blog.css
@@ -1,3 +1,4 @@
+/* Css reset starts here */
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -46,76 +47,75 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
-/* custom starts */
-body{
-    line-height: 1.5;
+
+
+*{
+    margin   : 0px;
+    padding: 0px;
+    box-sizing: border-box;
 }
-/* header */
-.header{
-    background-color:yellowgreen;
-    text-align: center;
-    font-size: 28px;
-    padding: 80px;
-}
-h1{
-    font-size: 38px;
-    text-transform: uppercase;
-}
-/* anchor tags */
-a{
-    color: blue;
-    text-transform: uppercase;
-    font-size: 28px;
-    padding: 20px;
-    text-decoration: none;
-    margin-top: 20px;
-}
-h2{
-    font-size: 24px;
-    color: red;
-}
-.text{
-    color: black;
-}
-p{
-    font-size: 24px;
-    color: white;
-}
-.container{
-    width: 800px;
-    margin: 0 auto;
-}
-.hero{
-    background-color: yellowgreen;
-    padding: 60px;
-}
+/* Css reset ends here  */
+
+
+/* header strats here */
 .heading{
-    font-size: 24px;
+    text-transform: uppercase;
+    text-decoration: none;
+    text-align: center;
+    background-color: blue;
+    padding: 28px;
+}
+a{
+    font-size: 30px;
+    color: aliceblue;
+    text-decoration: none;
     padding: 24px;
 }
-.blog{
-    background-color: teal;
+/* body custom starts */
+
+body{
+   background-color: darkslategrey;
+    background-size: cover;
+    color: #fff
 }
-img{
-    width: 200px;
-    height: 200px;
-    border-radius: 50%;
-}
-.para{
-    font-size: 20px;
-    color: white;
-    padding: 10px;
-}
-.article-link{
-    font-size: 24px;
-    color: crimson;
-    text-transform: uppercase;
-}
-/* footer starts here */
-.footer{
-    padding: 20px;
-    font-size: 32px;
+/* form style starts */
+.container{
     text-align: center;
-    background-color: yellowgreen;
-    color: white;
+}
+
+.registration-form{
+margin: 0 auto;
+    left: 50%;
+    right: 50%;
+    width: 350px;
+    padding-bottom: 200px;
+}
+
+.registration-form h1{
+    font-size:32px;
+    text-align: center;
+    text-transform: uppercase;
+    margin: 40px 0;
+}
+.registration-form p{
+    font-size: 20px;
+    margin: 15px 0;
+}
+/* input button style here */
+.registration-form input{
+    font-size: 16px;
+    padding: 15px 10px;
+    width: 100%;
+}
+/* form button styles here */
+.registration-form button{
+    font-size: 18px;
+    padding: 14px 10px;
+    width: fit-content;
+    margin-top: 20px;
+}
+/* registration button styling */
+
+.registration-form button:hover{
+color:red;
 }
