--- a/assignment-flex/style.css
+++ b/assignment-flex/style.css
@@ -1,4 +1,3 @@
-/* Css reset starts here */
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -47,75 +46,74 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
-
-
-*{
-    margin   : 0px;
-    padding: 0px;
-    box-sizing: border-box;
-}
-/* Css reset ends here  */
-
-
-/* header strats here */
-.heading{
-    text-transform: uppercase;
-    text-decoration: none;
-    text-align: center;
-    background-color: blue;
-    padding: 28px;
-}
-a{
-    font-size: 30px;
-    color: aliceblue;
-    text-decoration: none;
-    padding: 24px;
-}
-/* body custom starts */
+/* custom starts */
 
 body{
-   background-color: darkslategrey;
-    background-size: cover;
-    color: #fff
+    line-height: 1.7;
 }
-/* form style starts */
+/* header starts */
+.header{
+    background-color: darkcyan;
+    padding: 10px;
+    margin: 22px 0;
+    font-size: 0;
+}
 .container{
-    text-align: center;
+   max-width: 1200px;
+   margin: 0 auto;
+   padding: 0 32px;
 }
-
-.registration-form{
-margin: 0 auto;
-    left: 50%;
-    right: 50%;
-    width: 350px;
-    padding-bottom: 200px;
+img{
+    width: 180px;;
 }
-
-.registration-form h1{
-    font-size:32px;
-    text-align: center;
+nav a{
+    text-decoration: none;
     text-transform: uppercase;
-    margin: 40px 0;
+    color: antiquewhite;
+    padding-right: 20px;
 }
-.registration-form p{
-    font-size: 20px;
-    margin: 15px 0;
+.container,.nav{
+    display: inline-block;
+    vertical-align: middle;
 }
-/* input button style here */
-.registration-form input{
-    font-size: 16px;
-    padding: 15px 10px;
-    width: 100%;
+.nav{
+font-size: 16px;
+margin-left: 700px;
+padding: 16px;
 }
-/* form button styles here */
-.registration-form button{
-    font-size: 18px;
-    padding: 14px 10px;
-    width: fit-content;
-    margin-top: 20px;
-}
-/* registration button styling */
 
-.registration-form button:hover{
-color:red;
+.container, .navigation{
+    display: inline-block;
+    text-align: right;
+}
+/* article */
+.article{
+    font-size: 0;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+.article-img{
+    width: 100%
+}
+.col{
+    width: 50%;
+    display: inline-block;
+    font-size: 20px;
+    vertical-align: top;
+}
+h1{
+    text-transform: uppercase;
+    color: green;
+    font-size: 24px;
+    margin-bottom: 16px;
+}
+p{
+    color:blue;
+}
+/* footer strats */
+.footer{
+    text-align: center;
+    background-color:darkcyan ;
+    padding: 20px;
+    margin-top: 20px;
 }
