--- a/assignment-flex-2/style.css
+++ b/assignment-flex-2/style.css
@@ -46,73 +46,64 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
-/* custom starts */
 
-*
-*::before,
-*::after{
-box-sizing: border-box;
-}
 body{
-	line-height: 1.5;
-	font-size: 16px;
+    line-height: 1.6;
+    font-size: 16px;
+    background-color: antiquewhite;
+    font-family: sans-serif;
 }
-/* header starts */
-.header{
-	background-color: darkmagenta;
-height: 150px;
-line-height: 150px;
-}
-img{
-	width: 100px;
-	height: 100px;
-	margin-left: 80px;
-	padding-top: 20px;
-}
-.nav a{
-	text-transform: uppercase;
-	text-decoration: none;
-	vertical-align: middle;
-	font-size: 28px;
-	padding: 30px;
-	color: white;
-}
-.nav {
-	float: right;
-	vertical-align: middle;
-}
-/* first image custom starts */
 
-/* first */
-.first{
-	height: 300px;
-	width: 300px;
+    .container{
+        width: 1200px;
+        margin: 0 auto;
+        padding: 18px 32px;
+        background-color: azure;
+    }
+
+/* clearfix */
+.clearfix::before,
+.clearfix::after{
+    content: "";
+    display: table;
 }
-.section{
-	background-color: bisque
+.clearfix::after{
+ clear: both;
+
 }
-	.col{
-		float: left;
-		width: 33.3%;
-	}
-	p{
-		margin-top: 30px;
-		font-size: 14px;
-		line-height: 1.9;
-	}
-	
-	/*footer strats here  */
-	.footer{
-		background-color: darkmagenta;
-		padding: 40px;
-		text-align: center;
-		font-size: 28px;
-		text-decoration: none;
-	}
-	.navigation a{
-		color: white;
-		text-align: center;
-		text-decoration: none;
-		text-transform: uppercase;
-		padding: 30px;
-	}
+
+/* custom starts */
+*{
+    box-sizing: border-box;
+}
+/* header */
+.header{
+    font-size: 26px;
+}
+
+h1{
+    font-size: 44px;
+    text-align: center;
+}
+/* article */
+ img{
+    width: 300px;
+}
+.left{
+    float: left;
+}
+.left-sidebar{
+    font-size: 20px;
+}
+.sidebar-q{
+    font-size: 20px;
+}
+.quote{
+    padding: 12px 32px;
+}
+aside{
+    width: 25%;
+}
+article{
+    width: 50%;
+}
