--- a/style.css
+++ b/style.css
@@ -46,64 +46,97 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
-
+/* custom starts */
+*,
+*::before,
+*::after{
+    box-sizing: border-box;
+}
 body{
     line-height: 1.6;
-    font-size: 16px;
-    background-color: antiquewhite;
-    font-family: sans-serif;
+    font-size: 20px;
 }
-
-    .container{
-        width: 1200px;
-        margin: 0 auto;
-        padding: 18px 32px;
-        background-color: azure;
-    }
-
-/* clearfix */
+.container{
+   max-width: 100%;
+   margin: 0 auto;
+   padding: 32px;
+}
 .clearfix::before,
 .clearfix::after{
     content: "";
     display: table;
 }
+
 .clearfix::after{
- clear: both;
-
+    clear:both;
 }
 
-/* custom starts */
-*{
-    box-sizing: border-box;
-}
-/* header */
+/* header starts */
 .header{
-    font-size: 26px;
-}
+background-color: blueviolet;
+padding: 16px 0;
 
-h1{
-    font-size: 44px;
-    text-align: center;
+}
+.logo{
+    float: left;
+    color: #ffff;
+    font-size: 24px;
+    text-decoration: none;
+    text-transform: uppercase;
+    margin-right: 24px;
+}
+.nav a{
+    float: right;
+    color: #ffff;
+    font-size: 24px;
+    text-decoration: none;
+    text-transform: uppercase;
+    margin-right: 24px;
 }
 /* article */
- img{
-    width: 300px;
+.article{
+    background-color: aliceblue;
 }
-.left{
+.article-heading{
+    font-size: 34px;
+}
+.article-img{
+    width: 100%;
+    border: 4px solid yellow;
+    border-radius: 8px;
+}
+.col{
+    float: left;
+    width: 50%;
+}
+.article-col-left{
+    padding-right: 60px;
+}
+/* gallery */
+
+.gallery{
+    padding: 50px 0;
+
+}
+.col-1-2{
+    width: 45%;
+    margin: 2.5%;
+}
+.gallery img{
+    width: 100%;
+}
+.col-1-2{
     float: left;
 }
-.left-sidebar{
-    font-size: 20px;
-}
-.sidebar-q{
-    font-size: 20px;
-}
-.quote{
-    padding: 12px 32px;
-}
-aside{
-    width: 25%;
-}
-article{
-    width: 50%;
+
+/* top button */
+.top-btn{
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    display: inline-block;
+    color: black;
+    position: fixed;
+   left: 50%;
+    text-decoration: none;
 }
