--- a/prototype-2/backgrounds and gradients/style.css
+++ b/prototype-2/backgrounds and gradients/style.css
@@ -47,61 +47,77 @@ table {
 	border-spacing: 0;
 }
 
-/* style starts */
-
+/* custom starts */
 *,
 *::before,
-*::after{
+::after{
     box-sizing: border-box;
 }
+/* general */
 
 body{
+    font-size: 18px;
     line-height: 1.6;
-    background-color: black;
-    font-size: 16px;
+    background-size: cover;
+    font-family: sans-serif;
+    background: url(https://images.pexels.com/photos/600114/pexels-photo-600114.jpeg?cs=srgb&dl=pexels-victor-freitas-600114.jpg&fm=jpg) 50% no-repeat;
+    background-size: cover;
+    padding-bottom: 120px;
+    background-attachment: fixed;
 }
 .container{
-    max-width: 1200px;
+    max-width: 1350px;
     padding: 0 32px;
     margin: 0 auto;
 }
-
 .flex{
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-.article-header{
-    padding: 32px 60px;
-    color: #ffff;
+.centre{
+    display: flex;
+    justify-content: centre;
+    align-items: center;
+}
+/* header starts */
+.header{
+    font-size: 48px;
+    text-align: center;
+    color: #fff;
+    margin-bottom: 38px;
+    font-weight: 700px;
+    text-transform: capitalize;
+   
+  
+}
+/* box styling */
+.box{
+    width: 300px;
+    height: 300px;
+    border: 5px solid black;
+    font-size: 32px;
+    justify-content: center;
  
 }
-.article-header h1{
-    font-size: 52px;
-    font-family: "overpass ital";
-    text-transform: capitalize;
-   margin-bottom: 70px;
-}
-.article-header h2{
-    font-size: 40px;
-    color: red;
-    font-weight: 700;
-}
-.article-header time{
-    font-size: 32px;
+.box1{
+   background-color: crimson;
 
 }
-.heading{
-    font-size: 40px;
-    font-family: "overpass ital";
-    margin: 40px;
-    color: #fff;
-    text-transform: capitalize;
+.box2{
+ background: linear-gradient(crimson ,black);
+}
+.box3{
+  background: radial-gradient(crimson,black);
+}
+/* other section starts */
+.other{
+ margin-top: 50px;
+}
+.big-box{
+    width: 100%;
+    height: 350px;
+    background:  linear-gradient(transparent ,crimson), url(https://burst.shopifycdn.com/photos/city-lights-through-rain-window.jpg?width=1200&format=pjpg&exif=1&iptc=1)50% no-repeat;
+    background-size: cover;
 }
 
-.para{
-    font-family: 'Overpass', sans-serif;
-    font-size: 20px;
-    text-indent: 40px;
-    color: #fff;
-}
